--- a/app/views/mentors/_modal.html.erb
+++ b/app/views/mentors/_modal.html.erb
@@ -9,11 +9,11 @@
       </div>
       <div class="modal-body">
         <div class="field">
-          <label for="recipient-name" class="col-form-label">名前:</label>
+          <label for="recipient-name" class="col-form-label">名前: <span class="badge badge-pill badge-danger">必須</span></label>
           <%= f.text_field :name, id: "recipient-name", class: "form-control" %><br>
         </div>
         <div class="field">
-          <label for="recipient-name" class="col-form-label">拠点名:</label><br>
+          <label for="recipient-name" class="col-form-label">拠点名: <span class="badge badge-pill badge-danger">必須</span></label><br>
           <%= f.select :locate, [["渋谷校", "渋谷校"], ["東京駅前校", "東京駅前校"],  ["池袋校", "池袋校"], ["新宿校", "新宿校"],["梅田校", "梅田校"],["名古屋校", "名古屋校"],["リモート校", "リモート校"]], :prompt => "選択してください" %>
         </div>
       </div>
