--- a/app/assets/stylesheets/parts.scss
+++ b/app/assets/stylesheets/parts.scss
@@ -10,3 +10,14 @@ header{
     margin-top: 27px;
     display: inline-block; 
 }
+
+#calendar {
+    margin: 0 auto;
+    width: 700px;
+    text-align: center;
+    position: fixed;
+    top: 90px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
